fixed grid alignment for volunteer opps

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,9 +67,40 @@
     }
 
 
-.footer {
-  position: absolute;
-  margin-bottom: 0 !important;
-  margin-top: 60px !important;
-}
+    .footer {
+      position: absolute;
+      margin-bottom: 0 !important;
+      margin-top: 60px !important;
+    }
+
+    .thumbnail {
+        height: 350px;
+    }
+
+    .button-details {
+        float: right;
+    }
+
+    .thumb-image {
+        height: 160px;
+        max-width: 360px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto
+    }
+
+    .serve-pic {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 100%;
+        max-height: 100%;
+        height: 100%;
+        width: 100%;
+        padding: 10px;
+    }
+
+    .caption-title {
+        height: 60px;
+    }
 
